docs: add link to props.css

--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -297,6 +297,8 @@ Customize the styles applied to your Starlight site by providing additional CSS 
    });
    ```
 
+You can find a list of all the CSS custom properties used by Starlight that you can use or override to customize your site in this [file](https://github.com/withastro/starlight/blob/main/packages/starlight/style/props.css).
+
 ## Custom fonts
 
 By default, Starlight uses sans-serif fonts available on a user’s local device for all text.
