--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -297,7 +297,7 @@ Customize the styles applied to your Starlight site by providing additional CSS 
    });
    ```
 
-You can find a list of all the CSS custom properties used by Starlight that you can use or override to customize your site in this [file](https://github.com/withastro/starlight/blob/main/packages/starlight/style/props.css).
+You can see all the CSS custom properties used by Starlight that you can set to customize your site in the [`props.css` file on GitHub](https://github.com/withastro/starlight/blob/main/packages/starlight/style/props.css).
 
 ## Custom fonts
 
