--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -297,6 +297,8 @@ Customize the styles applied to your Starlight site by providing additional CSS 
    });
    ```
 
+You can see all the CSS custom properties used by Starlight that you can set to customize your site in the [`props.css` file on GitHub](https://github.com/withastro/starlight/blob/main/packages/starlight/style/props.css).
+
 ## Custom fonts
 
 By default, Starlight uses sans-serif fonts available on a user’s local device for all text.
