i18n(ja): Update components.mdx

--- a/docs/src/content/docs/ja/guides/components.mdx
+++ b/docs/src/content/docs/ja/guides/components.mdx
@@ -137,6 +137,6 @@ import { Icon } from '@astrojs/starlight/components';
 
 #### すべてのアイコン
 
-以下に、利用可能なすべてのアイコンと各アイコンの名前を示します。
+以下に、利用可能なすべてのアイコンとその名前を示します。アイコンをクリックすると、対応するコンポーネントのコードをコピーできます。
 
 <IconsList />
