i18n(fr): update `customization.mdx`

--- a/docs/src/content/docs/fr/guides/customization.mdx
+++ b/docs/src/content/docs/fr/guides/customization.mdx
@@ -297,6 +297,8 @@ Personnalisez les styles appliqués à votre site Starlight en créant des fichi
    });
    ```
 
+Vous pouvez voir toutes les propriétés CSS personnalisées utilisées par Starlight que vous pouvez définir pour personnaliser votre site dans le [fichier `props.css` sur GitHub](https://github.com/withastro/starlight/blob/main/packages/starlight/style/props.css).
+
 ## Polices personnalisées
 
 Par défaut, Starlight utilise des polices sans empattement disponibles en local sur la machine du visiteur pour tout les textes.
