--- a/docs/src/content/docs/es/guides/customization.mdx
+++ b/docs/src/content/docs/es/guides/customization.mdx
@@ -290,6 +290,8 @@ Personaliza los estilos aplicados a tu sitio de Starlight proporcionando archivo
    });
    ```
 
+Puedes ver todas las propiedades CSS personalizadas utilizadas por Starlight que puedes configurar para personalizar tu sitio en el archivo [`props.css` en GitHub](https://github.com/withastro/starlight/blob/main/packages/starlight/style/props.css).
+
 ## Fuentes personalizadas
 
 De forma predeterminada, Starlight utiliza fuentes sans-serif disponibles en el dispositivo local del usuario para todo el texto.
