update: updated components & frontmatter

--- a/docs/src/content/docs/fr/guides/components.mdx
+++ b/docs/src/content/docs/fr/guides/components.mdx
@@ -150,6 +150,6 @@ Le code ci-dessus génère ce qui suit sur la page :
 
 #### Toutes les icônes
 
-Une liste de toutes les icônes disponibles est affichée ci-dessous avec leurs noms associés.
+Une liste de toutes les icônes disponibles est affichée ci-dessous avec leurs noms associés. Cliquez sur une icône pour copier le code du composant.
 
 <IconsList />
