--- a/docs/src/content/docs/es/guides/customization.mdx
+++ b/docs/src/content/docs/es/guides/customization.mdx
@@ -175,7 +175,7 @@ defineConfig({
 
 Starlight cuenta con soporte incorporado para agregar enlaces a tus cuentas de redes sociales en el encabezado del sitio mediante la opción [`social`](/es/reference/configuration/#social) en la integración de Starlight.
 
-Actualmente, se admiten enlaces a Bitbucket, Codeberg, Codepen, Discord, GitHub, GitLab, LinkedIn, Mastodon, Microsoft Teams, Threads, Twitch, Twitter y Youtube. ¡Háznoslo saber en GitHub o Discord si necesitas soporte para otro servicio!
+Actualmente, se admiten enlaces a Bitbucket, Codeberg, Codepen, Discord, GitHub, GitLab, Gitter, LinkedIn, Mastodon, Microsoft Teams, Threads, Twitch, Twitter y Youtube. ¡Háznoslo saber en GitHub o Discord si necesitas soporte para otro servicio!
 
 ```js
 // astro.config.mjs
