translate some label

--- a/docs/src/content/docs/zh/guides/components.mdx
+++ b/docs/src/content/docs/zh/guides/components.mdx
@@ -65,16 +65,16 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 <Tabs>
-	<TabItem label="Stars">天狼星、织女星、参宿四</TabItem>
-	<TabItem label="Moons">木卫一、木卫二、木卫三</TabItem>
+	<TabItem label="恒星">天狼星、织女星、参宿四</TabItem>
+	<TabItem label="卫星">木卫一、木卫二、木卫三</TabItem>
 </Tabs>
 ```
 
 以上代码在页面上生成了以下选项卡：
 
 <Tabs>
-	<TabItem label="Stars">天狼星、织女星、参宿四</TabItem>
-	<TabItem label="Moons">木卫一、木卫二、木卫三</TabItem>
+	<TabItem label="恒星">天狼星、织女星、参宿四</TabItem>
+	<TabItem label="卫星">木卫一、木卫二、木卫三</TabItem>
 </Tabs>
 
 ### 卡片
@@ -92,10 +92,10 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 <Card title="看看这个">你想要突出显示的有趣内容。</Card>
 
 <CardGrid>
-	<Card title="Stars" icon="star">
+	<Card title="恒星" icon="star">
 		天狼星、织女星、参宿四
 	</Card>
-	<Card title="Moons" icon="moon">
+	<Card title="卫星" icon="moon">
 		木卫一、木卫二、木卫三
 	</Card>
 </CardGrid>
@@ -106,10 +106,10 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 <Card title="看看这个">你想要突出显示的有趣内容。</Card>
 
 <CardGrid>
-	<Card title="Stars" icon="star">
+	<Card title="恒星" icon="star">
 		天狼星、织女星、参宿四
 	</Card>
-	<Card title="Moons" icon="moon">
+	<Card title="卫星" icon="moon">
 		木卫一、木卫二、木卫三
 	</Card>
 </CardGrid>
@@ -120,7 +120,7 @@ import { Card, CardGrid } from '@astrojs/starlight/components';
 
 ```astro
 <CardGrid stagger>
-	<!-- cards -->
+	<!-- 卡片组件 -->
 </CardGrid>
 ```
 
