i18n(zh-cn): Optimize Chinese translation

--- a/docs/src/content/docs/zh/index.mdx
+++ b/docs/src/content/docs/zh/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: Starlight 🌟 使用 Astro 构建文档站点
-description: Starlight 帮助你使用 Astro 构建漂亮、高性能的文档网站。
+description: Starlight 帮助你使用 Astro 构建 Astro 构建漂亮、高性能的文档网站。
 template: splash
 hero:
-  title: 使用 Starlight 让你的文档闪耀
-  tagline: 构建漂亮、高性能的文档网站。快速、易用、可访问。
+  title: Starlight <br/> 使你的文档闪耀夺目
+  tagline: 快速、易用、易于访问 —— 构建卓越文档网站所需的一切。
   image:
     file: ../../../assets/hero-star.webp
   actions:
