Use accent & dark variants in starter landing hero

--- a/examples/tailwind/src/content/docs/index.mdx
+++ b/examples/tailwind/src/content/docs/index.mdx
@@ -5,7 +5,12 @@ template: splash
 hero:
   title: |
     Welcome to Starlight with
-    <span class="font-black bg-gradient-to-b from-sky-600 to-sky-400 text- text-transparent bg-clip-text">
+    <span
+      class="font-black text-transparent
+        bg-clip-text bg-gradient-to-b
+        from-accent-700 to-accent-400
+        dark:from-accent-500 dark:to-accent-200"
+    >
       Tailwind
     </span>
   tagline: Congrats on setting up a new Starlight project!
