--- a/docs/src/content/docs/zh/index.mdx
+++ b/docs/src/content/docs/zh/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Starlight 🌟 使用 Astro 构建文档站点
-description: Starlight 帮助你使用 Astro 构建 Astro 构建漂亮、高性能的文档网站。
+description: Starlight 帮助你使用 Astro 构建漂亮、高性能的文档网站。
 template: splash
 hero:
   title: Starlight <br/> 使你的文档闪耀夺目
