i18n(zh-cn): Optimize Chinese translation (#459)
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/zh/getting-started.mdx
+++ b/docs/src/content/docs/zh/getting-started.mdx
@@ -7,7 +7,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 :::caution[工作正在进行中]
 Starlight 处于早期开发阶段。
-如果您发现有些东西不能正常工作，请在 [GitHub 上打开一个问题](https://github.com/withastro/starlight/issues/new/choose) ，或在 [Discord](https://astro.build/chat) 上告诉我们。
+如果你发现有些东西不能正常工作，请在 [GitHub 上新建一个 issue](https://github.com/withastro/starlight/issues/new/choose)，或在 [Discord](https://astro.build/chat) 上告诉我们。
 :::
 
 ## 创建一个新项目
