--- a/docs/src/content/docs/guides/components.mdx
+++ b/docs/src/content/docs/guides/components.mdx
@@ -127,41 +127,24 @@ Add the `stagger` attribute to shift the second column of cards vertically and a
 
 ### Link Cards
 
-A more minimal `<LinkCard>` component can be used link to different parts of your project or to outline a section (such as a table of contents).
+Use the `<LinkCard>` component to link prominently to different pages.
 
-A `<LinkCard>` requires a `heading` and can optionally include a `description`. You can [`<a>` HTML element](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a#attributes) attributes such as `href` to specify the link or `target` to set where the linked URL is opened.
+A `<LinkCard>` requires a `heading` and an [`href`](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a#href) attribute. You can optionally include a short `description` or other link attributes such as `target`.
 
-You can also use `<CardGrid>` with `<LinkCard>`.
+Group multiple `<LinkCard>` components in `<CardGrid>` to display cards side-by-side when there’s enough space.
 
 ```mdx
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
+<LinkCard
+	heading="Customizing Starlight"
+	description="Learn how to make your Starlight site your own with custom styles, fonts, and more."
+	href="/guides/customization/"
+/>
+
 <CardGrid>
-	<LinkCard
-		heading="Authoring Content in Markdown"
-		description="An overview of the Markdown syntax Starlight supports."
-		href="/guides/authoring-content/"
-	/>
-	<LinkCard
-		heading="Components"
-		description="Using components in MDX with Starlight."
-		href="/guides/components/"
-	/>
-	<LinkCard
-		heading="Customizing Starlight"
-		description="Learn how to make your Starlight site your own with custom styles, fonts, and more."
-		href="/guides/customization/"
-	/>
-	<LinkCard
-		heading="Internationalization (i18n)"
-		description="Learn how to configure your Starlight site to support multiple languages."
-		href="/guides/i18n/"
-	/>
-	<LinkCard
-		heading="Project Structure"
-		description="Learn how to organize files in your Starlight project."
-		href="/guides/project-structure/"
-	/>
+	<LinkCard heading="Authoring Markdown" href="/guides/authoring-content/" />
+	<LinkCard heading="Components" href="/guides/components/" />
 </CardGrid>
 ```
 
@@ -169,32 +152,15 @@ The above code generates the following on the page:
 
 import { LinkCard } from '@astrojs/starlight/components';
 
+<LinkCard
+	heading="Customizing Starlight"
+	description="Learn how to make your Starlight site your own with custom styles, fonts, and more."
+	href="/guides/customization/"
+/>
+
 <CardGrid>
-	<LinkCard
-		heading="Authoring Content in Markdown"
-		description="An overview of the Markdown syntax Starlight supports."
-		href="/guides/authoring-content/"
-	/>
-	<LinkCard
-		heading="Components"
-		description="Using components in MDX with Starlight."
-		href="/guides/components/"
-	/>
-	<LinkCard
-		heading="Customizing Starlight"
-		description="Learn how to make your Starlight site your own with custom styles, fonts, and more."
-		href="/guides/customization/"
-	/>
-	<LinkCard
-		heading="Internationalization (i18n)"
-		description="Learn how to configure your Starlight site to support multiple languages."
-		href="/guides/i18n/"
-	/>
-	<LinkCard
-		heading="Project Structure"
-		description="Learn how to organize files in your Starlight project."
-		href="/guides/project-structure/"
-	/>
+	<LinkCard heading="Authoring Markdown" href="/guides/authoring-content/" />
+	<LinkCard heading="Components" href="/guides/components/" />
 </CardGrid>
 
 ### Icon
