Make aside label canbe translate.

--- a/docs/src/content/docs/zh/getting-started.mdx
+++ b/docs/src/content/docs/zh/getting-started.mdx
@@ -88,7 +88,7 @@ description: This is a page in my Starlight-powered site
 
 ## 更新 Starlight
 
-:::tip[提示]
+:::tip
 由于 Starlight 是 beta 软件，所以会经常更新和改进。请务必定期更新 Starlight！
 :::
 
