--- a/docs/src/content/docs/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/guides/css-and-tailwind.mdx
@@ -195,14 +195,14 @@ module.exports = {
 ## Theming
 
 Starlight’s color theme can be controlled by overriding its default custom properties.
-These variables are used throughout the UI with a range of gray shades used for text and background colors and a shades of an accent color used for links, and to highlight current items in navigation.
+These variables are used throughout the UI with a range of gray shades used for text and background colors and an accent color used for links and to highlight current items in navigation.
 
 ### Color theme editor
 
 Use the sliders below to modify Starlight’s accent and gray color palettes.
 The dark and light preview areas will show the resulting colors, and the whole page will also update to preview your changes.
 
-If you’re happy with your changes, copy the CSS or Tailwind code below and use it in your project.
+When you’re happy with your changes, copy the CSS or Tailwind code below and use it in your project.
 
 import ThemeDesigner from '../../../components/theme-designer.astro';
 
