Make preset picker i18n ready

--- a/docs/src/content/docs/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/guides/css-and-tailwind.mdx
@@ -208,6 +208,15 @@ import ThemeDesigner from '../../../components/theme-designer.astro';
 
 <ThemeDesigner
 	labels={{
+		presets: {
+			label: 'Presets',
+			ocean: 'Ocean',
+			forest: 'Forest',
+			oxide: 'Oxide',
+			nebula: 'Nebula',
+			default: 'Default',
+			random: 'Random',
+		},
 		hue: 'Hue',
 		chroma: 'Chroma',
 		pickColor: 'Pick color',
