--- a/docs/src/content/docs/guides/i18n.mdx
+++ b/docs/src/content/docs/guides/i18n.mdx
@@ -145,6 +145,10 @@ In addition to hosting translated content files, Starlight allows you to transla
 
 English, Czech, French, German, Italian, Japanese, Portuguese, Dutch, Danish, Spanish, Turkish, Arabic, Norwegian, and Simplified Chinese translated UI strings are provided out of the box, and we welcome [contributions to add more default languages](https://github.com/withastro/starlight/blob/main/CONTRIBUTING.md).
 
+:::tip
+By default, regional variants (e.g. `pt-BR`) will receive the built-in translations for its base language (e.g. `pt`).
+:::
+
 You can provide translations for additional languages you support — or override our default labels — via the `i18n` data collection.
 
 1. Configure the `i18n` data collection in `src/content/config.ts` if it isn’t configured already:
