--- a/docs/src/content/docs/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/guides/css-and-tailwind.mdx
@@ -10,12 +10,13 @@ You can style your Starlight site with custom CSS files or use the Starlight Tai
 Customize the styles applied to your Starlight site by providing additional CSS files to modify or extend Starlight’s default styles.
 
 1. Add a CSS file to your `src/` directory.
-   For example, you could override Starlight’s default blue accent hue to purple:
+   For example, you could set a wider default column width and larger text size for page titles:
 
    ```css
    /* src/styles/custom.css */
    :root {
-   	--sl-hue-accent: 270;
+   	--sl-content-width: 50rem;
+   	--sl-text-5xl: 3.5rem;
    }
    ```
 
@@ -231,3 +232,57 @@ module.exports = {
 	plugins: [starlightPlugin()],
 };
 ```
+
+## Theming
+
+Starlight’s color theme can be controlled by overriding its default custom properties.
+These variables are used throughout the UI with a range of gray shades used for text and background colors and an accent color used for links and to highlight current items in navigation.
+
+### Color theme editor
+
+Use the sliders below to modify Starlight’s accent and gray color palettes.
+The dark and light preview areas will show the resulting colors, and the whole page will also update to preview your changes.
+
+When you’re happy with your changes, copy the CSS or Tailwind code below and use it in your project.
+
+import ThemeDesigner from '../../../components/theme-designer.astro';
+
+<ThemeDesigner
+	labels={{
+		presets: {
+			label: 'Presets',
+			ocean: 'Ocean',
+			forest: 'Forest',
+			oxide: 'Oxide',
+			nebula: 'Nebula',
+			default: 'Default',
+			random: 'Random',
+		},
+		editor: {
+			accentColor: 'Accent',
+			grayColor: 'Gray',
+			hue: 'Hue',
+			chroma: 'Chroma',
+			pickColor: 'Pick color',
+		},
+		preview: {
+			darkMode: 'Dark mode',
+			lightMode: 'Light mode',
+			bodyText:
+				'Body text is displayed in a gray shade with a high contrast with the background.',
+			linkText: 'Links are colored.',
+			dimText: 'Some text, like the table of contents, has a lower contrast.',
+			inlineCode: 'Inline code has a distinct background.',
+		},
+	}}
+>
+	<Fragment slot="css-docs">
+		Add the following CSS to your project in a [custom CSS
+		file](#custom-css-styles) to apply this theme to your site.
+	</Fragment>
+	<Fragment slot="tailwind-docs">
+		The example [Tailwind config file](#styling-starlight-with-tailwind) below
+		includes generated `accent` and `gray` color palettes to use in the
+		`theme.extend.colors` configuration object.
+	</Fragment>
+</ThemeDesigner>
