Use shorter Tailwind template flag & fix IDE links in README

--- a/docs/src/content/docs/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/guides/css-and-tailwind.mdx
@@ -63,21 +63,21 @@ Start a new Starlight project with Tailwind CSS pre-configured using `create ast
 <TabItem label="npm">
 
 ```sh
-npm create astro@latest -- --template withastro/starlight/examples/tailwind
+npm create astro@latest -- --template starlight/tailwind
 ```
 
 </TabItem>
 <TabItem label="pnpm">
 
 ```sh
-pnpm create astro --template withastro/starlight/examples/tailwind
+pnpm create astro --template starlight/tailwind
 ```
 
 </TabItem>
 <TabItem label="Yarn">
 
 ```sh
-yarn create astro --template withastro/starlight/examples/tailwind
+yarn create astro --template starlight/tailwind
 ```
 
 </TabItem>
