chore: applied suggestions

--- a/docs/src/content/docs/es/guides/components.mdx
+++ b/docs/src/content/docs/es/guides/components.mdx
@@ -160,13 +160,13 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 <CardGrid>
 	<LinkCard
 		title="Creación de contenido en Markdown"
-		href="/guides/authoring-content/"
+		href="/es/guides/authoring-content/"
 	/>
-	<LinkCard title="Componentes" href="/guides/components/" />
+	<LinkCard title="Componentes" href="/es/guides/components/" />
 </CardGrid>
 ```
 
-El código de arriba genera lo siguiente en la página:
+El código anterior genera lo siguiente en la página:
 
 import { LinkCard } from '@astrojs/starlight/components';
 
@@ -179,9 +179,9 @@ import { LinkCard } from '@astrojs/starlight/components';
 <CardGrid>
 	<LinkCard
 		title="Creación de contenido en Markdown"
-		href="/guides/authoring-content/"
+		href="/es/guides/authoring-content/"
 	/>
-	<LinkCard title="Componentes" href="/guides/components/" />
+	<LinkCard title="Componentes" href="/es/guides/components/" />
 </CardGrid>
 
 ### Iconos
