chore: applied suggestions pt.2

--- a/docs/src/content/docs/es/guides/components.mdx
+++ b/docs/src/content/docs/es/guides/components.mdx
@@ -154,7 +154,7 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 <LinkCard
 	title="Personalizando Starlight"
 	description="Aprende a hacer que tu sitio Starlight sea único con estilos personalizados, fuentes y más."
-	href="/guides/customization/"
+	href="/es/guides/customization/"
 />
 
 <CardGrid>
@@ -173,7 +173,7 @@ import { LinkCard } from '@astrojs/starlight/components';
 <LinkCard
 	title="Personalizando Starlight"
 	description="Aprende a hacer que tu sitio Starlight sea único con estilos personalizados, fuentes y más."
-	href="/guides/customization/"
+	href="/es/guides/customization/"
 />
 
 <CardGrid>
